[project]
name = "lorem-text"
version = "3.0"
description = "Dummy lorem ipsum text generator"
authors = [
    {name = "TheAbhijeet"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
]
homepage = "https://github.com/TheAbhijeet/lorem_text"
repository = "https://github.com/TheAbhijeet/lorem_text"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lorem_text = "lorem_text.cli:lorem_cli"

[tool.poetry.group.dev.dependencies]
sphinx = "~7.4"
pytest = "^8.3.5"
tox = "^4.25.0"
pre-commit = "^4.2.0"
